Added system classification

--- a/main.tex
+++ b/main.tex
@@ -11,4 +11,7 @@
 	\begin{center}
 		Formelsamling Github side: \href{https://github.com/jondalnas/22050-Continuous-Time-Signals-and-Linear-Systems-Formula-Collection}{22050 Continuous Time Signals and Linear Systems Formula Collection}
 	\end{center}
+
+	\section{System klassificering}
+	\input{System klassificering/System klassificering.tex}
 \end{document}
