--- a/main.tex
+++ b/main.tex
@@ -14,4 +14,7 @@
 
 	\section{System klassificering}
 	\input{System klassificering/System klassificering.tex}
+
+	\section{Impulsrespons}
+	\input{Impulsrespons/Impulsrespons.tex}
 \end{document}
