Added Zero-state respons

--- a/main.tex
+++ b/main.tex
@@ -17,4 +17,7 @@
 
 	\section{Impulsrespons}
 	\input{Impulsrespons/Impulsrespons.tex}
+
+	\section{Zero-state respons}
+	\input{Zero-state respons/Zero-state respons.tex}
 \end{document}
