Added Fourier serie

--- a/main.tex
+++ b/main.tex
@@ -20,4 +20,7 @@
 
 	\section{Zero-state respons}
 	\input{Zero-state respons/Zero-state respons.tex}
+
+	\section{Fourier serie}
+	\input{Fourier serie/Fourier serie.tex}
 \end{document}
