Added Fouriter transformation

--- a/main.tex
+++ b/main.tex
@@ -23,4 +23,7 @@
 
 	\section{Fourier serie}
 	\input{Fourier serie/Fourier serie.tex}
+
+	\section{Fourier transformation}
+	\input{Fourier transformation/Fourier transform.tex}
 \end{document}
